Actualizada la web, añadida la 6º noticia y publicada la tradu de P4

--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#897E78">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
+	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, persona 4, Traducciones, Scene, 3DS, PS2">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
 </head>
@@ -40,10 +40,15 @@
 				Nuestra misión es facilitar a los usuarios el poder disfrutar de esos juegos, ya que tienen historias que quieren ser contadas, tienen una jugabilidad que quiere ser disfrutada, pero el que un juego esté en inglés impide a mucha gente el poder disfrutarlos.
 				Así que nos dedicamos a traducir esos juegos para que tú y todo el mundo puedan disfrutarlo.<br><br>
 				<div class="title"><h1>Nuestros proyectos</h1></div>
-				Ahora mismo estamos empezando unos nuevos proyectos, traducir del inglés al español los juegos <a href="translations/runefactory4/informacion.html">"Rune Factory 4"</a> y <a href="translations/lordofmagna/informacion.html">"Lord of Magna: Maiden Heaven</a>, unos juegos que salieron en japonés y en inglés pero no en español. <br><br>
-				Acabamos de terminar la traducción de <a href="translations/stellaglow/informacion.html">Stella Glow</a>, prácticamente un año y poco hemos tardado en traducirlo, lo hemos probado y funciona bien, es fácil de aplicar, y te permitirá disfrutar el juego en español.<br><br>
+				Ahora mismo estamos trabajando en nuestros proyectos, por ahora estamos traduciendo del inglés al español los juegos <a href="translations/runefactory4/informacion.html">«Rune Factory 4»</a>, <a href="translations/lordofmagna/informacion.html">«Lord of Magna: Maiden Heaven»</a> y <a href="translations/persona4/informacion.html">«Shin Megami Tensei: Persona 4»</a>, unos juegos que salieron en japonés y en inglés pero no en español. <br><br>
+				Acabamos de terminar la traducción de <a href="translations/stellaglow/informacion.html">Stella Glow</a>, prácticamente un año y poco hemos tardado en traducirlo, lo hemos probado y funciona bien, es fácil de aplicar el parche, y te permitirá disfrutar el juego en español.<br><br>
 				Posiblemente tenga errores gramaticales, alguna que otra frase en un español que no sea neutro, o alguna palabra fuera de contexto, pero no somos profesionales, así que es normal.<br><br>
 				Si encuentras un error, revisa la sección de "información" del juego especifico para ayudarnos a arreglar errores y lo arreglaremos lo antes posible.
+				<div class="title"><h1>¿Qué significa que formamos parte de TraduSquare?</h1></div>
+				TraduSquare es una comunidad y portal de información que hemos formado los fan traductores de videojuegos al habla hispana de todo el mundo.<br>
+				Deseamos ayudarnos entre nosotros para poder realizar traducciones más profesionales para nuestros fans y también para crear un portal donde reunir todas las traducciones, información y mirrors de descarga de los parches para
+				tener un punto de partida donde poder informarse y disfrutar de tus juegos favoritos traducidos al español. <br><br>
+				<center><a href="https://tradusquare.es/"><img style="width: 480px; height: 270px; text-align: center;" onload="this.style.opacity='1';" src="images/tradusquare.png" ></a></center>
 				<div class="title"><h1>¿Por qué no aceptamos donaciones?</h1></div>
 				Gracias por querer contribuir por nuestras traducciones, pero en vez de donar tu dinero a nosotros, usa ese dinero en cosas que realmente te hagan falta para el día a día (y más sobre estas fechas que está la economía fatal).<br><br>
 				Nos alegra un montón que quieras donarnos una mínima cantidad de dinero, pero nosotros hacemos esto porque queremos que todo el mundo disfrute de los videojuegos en su idioma nativo (en este caso en español) y son proyectos hechos por fans para fans y sin ánimo de lucro :D<br><br>
