--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#897E78">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, Traducciones, Scene, 3DS">
+	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, persona 4, Traducciones, Scene, 3DS, PS2">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
 </head>
@@ -33,6 +33,14 @@
 		<div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="index.html"><div class="logo"></div></a></div>
 		<div class="content-container" style="width: 630px; float: left;">
+		<div class="content-title" style="width: 610px;">¡Lanzamos la traducción de SMT: Persona 4 y el nacimiento de TraduSquare!</div>
+			<div class="content">
+				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/12-2017/LanzamientoPersona4ytradusquare-24/images/top.png" ><br>
+                ¡Hola a todos!</b> <br><br>
+				¡Llego la hora y hacemos público la traducción de <b>Shin Megami Tensei: Persona 4 al español</b> junto con la <b>creación de una nueva comunidad y portal de fan traductores al español llamado Tradusquare</b>!<br><br>
+				El proyecto lleva en curso desde el 1 de Agosto de 2017, solo que no estábamos totalmente centrados en ese proyecto, por lo que avanzaba muy...<br><br>
+				<center><a class="boton_readmore" href="articles/12-2017/LanzamientoPersona4ytradusquare-24/LanzamientoPersona4ytradusquare.html">Leer más</a></center>
+			</div>
         <div class="content-title" style="width: 610px;">¡Novedades muy frescas en las traducciones y más!</div>
 			<div class="content">
 				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/12-2017/Avancestradus-17/images/top.png" ><br>
@@ -75,15 +83,6 @@
                 queremos llevar a cabo... <br><br>
 				<center><a class="boton_readmore" href="articles/10-2017/AvancesLord-25/Avances_Lord_of_Magna.html">Leer más</a></center>
 			</div>
-			<div class="content-title" style="width: 610px;">¡Añadimos las entradas!</div>
-			<div class="content">
-				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/10-2017/Entradas-22/images/top.jpg" ><br>
-                Ha pasado mucho tiempo, pero por fin…<br>
-                <b>¡¡Añadimos las entradas!!</b><br><br>
-
-				Nuestro superwebmaster ha trabajado arduamente para incluir detalles muy interesantes que esperamos os hagan más amena la espera de nuevas novedades.... <br><br>
-				<center><a class="boton_readmore" href="articles/10-2017/Entradas-22/Integramos_las_entradas.html">Leer más</a></center>
-			</div>
 		</div>
 			<div class="module" style="width: 260px;">
 			<div class="content-container">
@@ -91,7 +90,7 @@
 				<div class="content-title">Noticias</div>
 				</div>
 				<ul>
-                    <li><a href="#">Diciembre 2017</a></li>
+                    <li><a href="articles/12-2017/index.html">Diciembre 2017</a></li>
 					<li><a href="articles/11-2017/index.html">Noviembre 2017</a></li>
 					<li><a href="articles/10-2017/index.html">Octubre 2017</a></li>
 				</ul>
@@ -120,6 +119,14 @@
 					</div>
 					</div>
 				<div style="clear: both;"></div>
+				<div class="progress-title">Lord of Magna: Maiden Heaven</div>
+					<div class="wrap">
+					<div class="progress-radial progress-75" style="background-color: #4f7cfe;">
+ 					 <div class="overlay"></div>
+ 					 <div class="text-overlay" style="font-size: 30px;">75%</div>
+					</div>
+					</div>
+				<div style="clear: both;"></div>
 				<div class="progress-title">Rune Factory 4</div>
 					<div class="wrap">
 					<div class="progress-radial progress-15" style="background-color: #4f7cfe;">
@@ -128,11 +135,11 @@
 					</div>
 					</div>
 				<div style="clear: both;"></div>
-				<div class="progress-title">Lord of Magna: Maiden Heaven</div>
+				<div class="progress-title">SMT: Persona 4</div>
 					<div class="wrap">
-					<div class="progress-radial progress-75" style="background-color: #4f7cfe;">
+					<div class="progress-radial progress-5" style="background-color: #4f7cfe;">
  					 <div class="overlay"></div>
- 					 <div class="text-overlay" style="font-size: 30px;">75%</div>
+ 					 <div class="text-overlay" style="font-size: 30px;">5%</div>
 					</div>
 					</div>
 				<div style="clear: both;"></div>
@@ -143,6 +150,7 @@
 				<div class="module-title-background" style="background-image: url('images/friends-banner.png');">
 				<div class="content-title">Compañeros</div>
 				</div>
+				<a href="https://tradusquare.es/"><img style="margin-top: 10px;" onload="this.style.opacity='1';" width="240px" height="120px" src="images/tradusquare.png"></a>
 				<a href="http://transcene.net/"><img style="margin-top: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/transcene.png"></a>
 				<a href="http://hotayeldi-traducciones.blogspot.com.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/artema.png"></a>
 				<a href="http://tiovictor.romhackhispano.org/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/tiovictor.png"></a>
