--- a/translations/persona4/galeria.html
+++ b/translations/persona4/galeria.html
@@ -8,10 +8,10 @@
 	gtag('js', new Date());
 	gtag('config', 'UA-76928300-1');
 	</script>
-	<meta property="og:title" content="Glowtranslations - Rune Factory 4 - Galería"/>
-	<meta property="og:description" content="Galería sobre la traducción de Rune Factory 4."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metarune.jpg"/>
-	<title>GlowTranslations - Rune Factory 4 - Galería</title>
+	<meta property="og:title" content="Glowtranslations - Shin Megami Tensei: Persona 4 - Galería"/>
+	<meta property="og:description" content="Galería sobre la traducción de Shin Megami Tensei: Persona 4."/>
+	<meta property="og:image" content="http://glowtranslations.tk/images/metapersona4.jpg"/>
+	<title>GlowTranslations - Shin Megami Tensei: Persona 4 - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="gallery.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
@@ -27,8 +27,8 @@
 	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, persona 4, Traducciones, Scene, 3DS, PS2">
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
-</head> 
-<body class="body-RF4 galeria traducciones">
+</head>
+<body class="body-P4 galeria traducciones">
 	<script>
 		function openModal() {
  		 document.getElementById('myModal').style.display = "block";
@@ -75,28 +75,25 @@
 			<div class="content">
 				<div class="row">
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.JPG" onclick="openModal();currentSlide(1)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.JPG" onclick="openModal();currentSlide(2)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Logo-Rune.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Menú-inferior.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Menú-superior.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-5.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Pantalla-inicial.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Combate-1.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Selección.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Selección-de-género.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Menu.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
   </div>
 </div>
 
@@ -105,42 +102,37 @@
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.jpg" style="margin: auto;">
+      <div class="numbertext">1 / 7</div>
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.jpg" style="margin: auto;">
+      <div class="numbertext">2 / 7</div>
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Logo-Rune.jpg" style="margin: auto;">
+      <div class="numbertext">3 / 7</div>
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Menú-inferior.jpg" style="margin: auto;">
+      <div class="numbertext">4 / 7</div>
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-4.jpg" style="margin: auto;">
     </div>
     <div class="mySlides">
-      <div class="numbertext">5 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Menú-superior.jpg" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">6 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Pantalla-inicial.jpg" style="margin: auto;">
+      <div class="numbertext">5 / 7</div>
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-5.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">7 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Selección.jpg" style="margin: auto;">
+      <div class="numbertext">6 / 7</div>
+        <img onload="this.style.opacity='1';" src="gallery/Combate-1.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">8 / 8</div>
-        <img onload="this.style.opacity='1';" src="gallery/Selección-de-género.jpg" style="margin: auto;">
+      <div class="numbertext">7 / 7</div>
+        <img onload="this.style.opacity='1';" src="gallery/Menu.jpg" style="margin: auto;">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -150,45 +142,41 @@
     </div>
 		<div class="gallery-thumbs">
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-1.jpg" onclick="currentSlide(1)" alt="Conversaciones">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-1.JPG" onclick="currentSlide(1)" alt="Conversaciones">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-2.jpg" onclick="currentSlide(2)" alt="Conversaciones">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-2.JPG" onclick="currentSlide(2)" alt="Conversaciones">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Logo-Rune.jpg" onclick="currentSlide(3)" alt="Pantalla inicial">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-3.JPG" onclick="currentSlide(3)" alt="Conversaciones">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Menú-inferior.jpg" onclick="currentSlide(4)" alt="Menú inferior">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-4.jpg" onclick="currentSlide(4)" alt="Conversaciones">
     </div>
-    
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Menú-superior.jpg" onclick="currentSlide(5)" alt="Menú superior">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Pantalla-inicial.jpg" onclick="currentSlide(6)" alt="Pantalla inicial">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-5.jpg" onclick="currentSlide(5)" alt="Conversaciones">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Selección.jpg" onclick="currentSlide(7)" alt="Selecciones">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Combate-1.jpg" onclick="currentSlide(6)" alt="Combate">
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Selección-de-género.jpg" onclick="currentSlide(8)" alt="Generos">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Menu.jpg" onclick="currentSlide(7)" alt="Menú de inicio">
     </div>
     </div>
   </div>
 </div>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/ITZgMBU986c" frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="890" height="512" src="https://www.youtube.com/embed/ajmh-K9_Qcs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></center><br><br>
+
 			</div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../../js/menus.js" onload="mainMenu(), runeFactorySubMenu(), footer()"></script>
+		<script src="../../js/menus.js" onload="mainMenu(), persona4SubMenu(), footer()"></script>
 	</div>
 </body>
 </html>
