--- a/translations/persona4/informacion.html
+++ b/translations/persona4/informacion.html
@@ -8,10 +8,10 @@
 	gtag('js', new Date());
 	gtag('config', 'UA-76928300-1');
 	</script>
-	<meta property="og:title" content="Glowtranslations - Lord of Magna: Maiden Heaven - Información"/>
-	<meta property="og:description" content="Información sobre la traducción de Lord of Magna: Maiden Heaven."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metalord.jpg"/>
-	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Información</title>
+	<meta property="og:title" content="Glowtranslations - Shin Megami Tensei: Persona 4 - Información"/>
+	<meta property="og:description" content="Información sobre la traducción de Shin Megami Tensei: Persona 4."/>
+	<meta property="og:image" content="http://glowtranslations.tk/images/metapersona4.jpg"/>
+	<title>GlowTranslations - Shin Megami Tensei: Persona 4 - Información</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
@@ -27,20 +27,21 @@
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
 </head>
-<body class="body-LOM informacion traducciones">
+<body class="body-P4 informacion traducciones">
 	<div class="main-body">
 		<script src="../../menus.js"></script>
 		 <div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="../../index.html"><div class="logo"></div></a></div>
 		<div class="content-container">
-			<div class="content-title">¡Lord of Magna: Maiden Heaven en español!</div>
+			<div class="content-title">¡Shin Megami Tensei: Persona 4 en español!</div>
 			<div class="content">
-    <img onload="this.style.opacity='1';" src="../../images/lord-info.png" style="float: right; margin-right: -30px;">
-    Comenzando con la traducción de Rune Factory 4, nos ponemos manos a la obra con otro, un juego mas corto pero muy entretenido. <br>
-    Lord of Magna: Maiden Heaven, otro titulazo de la mano de yoshifumi hashimoto (otros titulos suyos son Rune Factory 4 y Story of seasons)   <br><br>
-    Aunque ya tenemos todo listo para empezar, le dedicaremos menos tiempo que al Rune Factory 4 ya que es un proyecto secundario.
+    <img onload="this.style.opacity='1';" src="../../images/p4-info.png" style="float: right; margin-right: -30px;">
+    Finalizando el 2017, terminando ya la traducción de Lord Of Magna: Maiden Heaven, empezamos con la traducción de uno de los mejores juegos de PS2: Shin Megami Tensei: Persona 4. <br>
+    Shin Megami Tensei: Persona 4, uno de los principales títulos de la rama «Persona» salio en PS2 el 10 de Julio en 2008 y ahora, el 24 de Diciembre de 2017, comienza su traducción al español.   <br><br>
+    Esta traducción estará en conjunto con la de Rune Factory 4 y es un proyecto que colabora TraduSquare <br>
+	<center><a href="https://tradusquare.es/"><img style="width: 280px; height: 140px; text-align: center;" onload="this.style.opacity='1';" src="../../images/tradusquare.png" ></a></center>
     <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
-    Al parecer, alguien del equipo de desarrollo de Lord of Magna decidió que no hace falta una demostración del juego, una pena la verdad, por desgracia no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe.<br>
+    Siendo un juego de PS2, pocas veces hay demos que se distribuyen de manera gratuita, pero por desgracia, este juego no contiene una demo así que no podemos distribuir una demo traducida.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
     El otro día llamamos a el servicio técnico de nuestra bola de cristal, la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra, así que solo podemos decir que estará tan pronto como lo terminemos, tres meses, un año, una década, no lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude antes estará :P<br>
     <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
@@ -48,7 +49,7 @@
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../../js/menus.js" onload="mainMenu(), lordofMagnaSubMenu(), footer()"></script>
+		<script src="../../js/menus.js" onload="mainMenu(), persona4SubMenu(), footer()"></script>
 	</div>
 </body>
 </html>
