--- a/translations/persona4/miembros.html
+++ b/translations/persona4/miembros.html
@@ -8,11 +8,12 @@
 	gtag('js', new Date());
 	gtag('config', 'UA-76928300-1');
 	</script>
-	<meta property="og:title" content="Glowtranslations - Rune Factory 4 - Miembros"/>
-	<meta property="og:description" content="Miembros de la traducción de Rune Factory 4."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metarune.jpg"/>
-	<title>GlowTranslations - Rune Factory 4 - Miembros</title>
+	<meta property="og:title" content="Glowtranslations - Shin Megami Tensei: Persona 4 - Miembros"/>
+	<meta property="og:description" content="Miembros de la traducción de Shin Megami Tensei: Persona 4."/>
+	<meta property="og:image" content="http://glowtranslations.tk/images/metapersona4.jpg"/>
+	<title>GlowTranslations - Shin Megami Tensei: Persona 4 - Miembros</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
+	<link rel="stylesheet" type="text/css" href="gallery.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="../../android-chrome-192x192.png">
@@ -27,29 +28,15 @@
 	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
 	<meta name="author" content="Glowtranslations">
 </head>
-<body class="body-RF4 participantes traducciones">
+<body class="body-P4 participantes traducciones">
 	<div class="main-body">
 		 <div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="../../index.html"><div class="logo"></div></a></div>
 		<div class="content-container">
 			<div class="content-title">Miembros de la traducción</div>
 			<div class="content">
-				Aquí están todos aquellos que están llevando un papel importante en la traducción de Rune Factory 4 al español.
+				Aquí están todos aquellos que están llevando un papel importante en la traducción de Shin Megami Tensei: Persona 4 al español.
 				<div class="title"><h1>Líder del proyecto</h1></div>
-				<div class="credits-container"> 
-					<div class="credits-name">Darkmet98</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div style="clear: both;"></div>
-				<div class="title"><h1>RomHacking</h1></div>
-				<div class="credits-container"> 
-					<div class="credits-name">Raugo</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Raugo.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
 				<div class="credits-container"> 
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
@@ -65,59 +52,35 @@
 					</div>
 				</div>
 				<div class="credits-container"> 
-					<div class="credits-name">Hec17</div>
+					<div class="credits-name">Lilia.~</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Hec17.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Lilia.~.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div class="credits-container"> 
-					<div class="credits-name">Jesa</div>
+					<div class="credits-name">Sorium</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div class="credits-container"> 
-					<div class="credits-name">Sonicus</div>
+					<div class="credits-name">ElaineWeasley</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container"> 
-					<div class="credits-name">Vanille</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container"> 
-					<div class="credits-name">Azu</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Elaine.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Corrección</h1></div>
 				<div class="credits-container"> 
-					<div class="credits-name">Sany</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Sany.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container"> 
-					<div class="credits-name">Jesa</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container"> 
-					<div class="credits-name">Vanille</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container"> 
 					<div class="credits-name">Azu</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Darkmet98</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
@@ -128,42 +91,63 @@
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div style="clear: both;"></div>
-				<div class="title"><h1>Agradecimientos</h1></div>
+                <div style="clear: both;"></div>
+				<div class="title"><h1>Vídeos</h1></div>
 				<div class="credits-container"> 
-					<div class="credits-name">Hotaru</div>
+					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Hotaru.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
 					</div>
-					<div class="credits-desc">Por las herramientas nuevas para la traducción.</div>
-				</div>
-				<div class="credits-container"> 
-					<div class="credits-name">Sorium</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
-					</div>
-					<div class="credits-desc">Traducción inicial.</div>
 				</div>
 				<div class="credits-container"> 
 					<div class="credits-name">Lilia.~</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Lilia.~.jpg" style="width: 100px; height: 100px;">
 					</div>
-					<div class="credits-desc">Traducción inicial.</div>
+				</div>
+				<div style="clear: both;"></div>
+				<div class="title"><h1>Agradecimientos</h1></div>
+				<div class="credits-container"> 
+					<div class="credits-name">IlDucci</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/IlDucci.jpg" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Romhacking, consejos sobre las imágenes, términos y traducciones.</div>
 				</div>
 				<div class="credits-container"> 
-					<div class="credits-name">ElaineWeasley</div>
+					<div class="credits-name">Leeg</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Elaine.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Leeg.jpg" style="width: 100px; height: 100px;">
 					</div>
-					<div class="credits-desc">Traducción inicial.</div>
+					<div class="credits-desc">Consejos y correcciones iniciales.</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Sonicus</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Consejos y correcciones iniciales.</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Meloman19</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Meloman19.jpg" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Romhacking.</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">TGE</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/TGE.jpg" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Romhacking.</div>
 				</div>
 				<div style="clear: both;"></div>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../../js/menus.js" onload="mainMenu(), runeFactorySubMenu(), footer()"></script>	
+		<script src="../../js/menus.js" onload="mainMenu(), persona4SubMenu(), footer()"></script>	
 	</div>
 </body>
 </html>
